<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingTop="150dp">

        <RelativeLayout
            android:id="@+id/usernameRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/txtusername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/Username"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_toRightOf="@+id/txtusername"
                android:background="@android:color/transparent"
                android:hint="@string/Username_hint"
                android:inputType="text"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/txtusername"
                android:layout_marginTop="15dp"
                android:background="@color/dividerColor" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/passwordRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernameRL"
            android:background="@color/white"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/txtpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/Password"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_toRightOf="@id/txtpassword"
                android:background="@android:color/transparent"
                android:hint="@string/Password_hint"
                android:inputType="textPassword"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/txtpassword"
                android:layout_marginTop="15dp"
                android:background="@color/dividerColor" />

        </RelativeLayout>


        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordRl"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/blue_rounded_button"
            android:text="@string/LoginBtn"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/white_rounded_button"
            android:text="@string/SignupBtn"
            android:textColor="@color/light_blue_400" />

    </RelativeLayout>

</ScrollView>